Enum product_sizes {
  "R"
  "L"
  "XL"
  "250gr"
}

Enum status {
  "On Progress"
  "Shipping"
  "Done"
}

Enum shipping {
  "Delivery"
  "Dine In"
  "Pick Up"
}

Table users {
  id serial [primary key]
  first_name varchar(255) [not null]
  last_name varchar(255) [not null]
  email varchar(255) [unique, not null]
  role varchar(20) [default: "customer", not null]
  password text [not null]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [default: `CURRENT_TIMESTAMP`]
  created_by int
  updated_by int
}

Ref: users.created_by > users.id
Ref: users.updated_by > users.id

Table profiles {
  id serial [primary key]
  user_id int
  image text
  address varchar(255)
  phone_number varchar(20)
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [default: `CURRENT_TIMESTAMP`]
  created_by int
  updated_by int
}

Ref: users.id - profiles.user_id 
Ref: profiles.created_by > users.id
Ref: profiles.updated_by > users.id

Table carts {
  id serial [primary key]
  user_id int
  product_id int
  amount int [note: "CHECK amount > 0"]
  subtotal numeric(10,2)
  size product_sizes [default: "R"]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [default: `CURRENT_TIMESTAMP`]
  created_by int
  updated_by int
}

Ref: carts.user_id > users.id
Ref: carts.product_id > products.id
Ref: carts.created_by > users.id
Ref: carts.updated_by > users.id

Table products {
  id serial [primary key]
  name varchar(255) [unique, not null]
  description text [not null]
  price numeric(10,2) [not null, note: "CHECK price > 0"]
  discount_percent numeric(5,2)
  rating numeric(2,1) [default: 5, note: "CHECK rating >= 0 AND rating <= 5"]
  is_flash_sale bool [default: false]
  stock int [note: "CHECK stock >= 0"]
  is_active bool [default: true]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [default: `CURRENT_TIMESTAMP`]
  created_by int
  updated_by int
}

Ref: products.created_by > users.id
Ref: products.updated_by > users.id

Table product_images {
  id serial [primary key]
  image text [not null]
  product_id int
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [default: `CURRENT_TIMESTAMP`]
  created_by int
  updated_by int
}

Ref: product_images.product_id > products.id
Ref: product_images.created_by > users.id
Ref: product_images.updated_by > users.id

Table sizes {
  id serial [primary key]
  name varchar(10) [unique, not null]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [default: `CURRENT_TIMESTAMP`]
  created_by int
  updated_by int
}

Ref: sizes.created_by > users.id
Ref: sizes.updated_by > users.id

Table size_products {
  id serial [primary key]
  product_id int
  size_id int
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [default: `CURRENT_TIMESTAMP`]
  created_by int
  updated_by int
}

Ref: size_products.product_id > products.id
Ref: size_products.size_id > sizes.id
Ref: size_products.created_by > users.id
Ref: size_products.updated_by > users.id

Table testimonies {
  id serial [primary key]
  user_id int
  position varchar(100)
  rating numeric(2,1) [default: 5, note: "CHECK rating >= 0 AND rating <= 5"]
  testimonial text
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [default: `CURRENT_TIMESTAMP`]
  created_by int
  updated_by int
}

Ref: users.id - testimonies.user_id
Ref: testimonies.created_by > users.id
Ref: testimonies.updated_by > users.id

Table orders {
  id serial [primary key]
  user_id int
  date_order timestamp [default:  `CURRENT_TIMESTAMP`]
  full_name varchar(255) [not null]
  email varchar(255) [not null]
  address varchar(255) [not null]
  phone varchar(20) [not null]
  payment_method varchar(50)
  shipping shipping [default: "Dine In"]
  status status [default: "On Progress"]
  total_transaction numeric(10,2) [not null, note: "CHECK total_transaction > 0"]
  delivery_fee numeric(10,2) [default: 0]
  tax numeric(10,2) [default: 0]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [default: `CURRENT_TIMESTAMP`]
  created_by int
  updated_by int 
}

Ref: orders.user_id > users.id
Ref: orders.created_by > users.id
Ref: orders.updated_by > users.id

Table ordered_products {
  id serial [primary key]
  order_id int
  product_id int
  product_name varchar(255) [not null, note: "Snapshot nama produk saat order"]
  product_price numeric(10,2) [not null, note: "Snapshot harga produk saat order, CHECK product_price > 0"]
  discount_percent numeric(5,2) [note: "Snapshot diskon produk saat order"]
  amount int [not null, note: "CHECK amount > 0"]
  subtotal numeric(10,2) [not null]
  size product_sizes [default: "L"]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [default: `CURRENT_TIMESTAMP`]
  created_by int
  updated_by int
}

Ref: ordered_products.order_id > orders.id
Ref: ordered_products.product_id > products.id
Ref: ordered_products.created_by > users.id
Ref: ordered_products.updated_by > users.id

Table sessions {
  id serial [primary key]
  user_id int
  session_token text [unique, not null]
  login_time timestamp [default: `CURRENT_TIMESTAMP`]
  expired_at timestamp
  ip_address varchar(30)
  device varchar(255)
  is_active bool [default: true]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [default: `CURRENT_TIMESTAMP`]
  created_by int
  updated_by int
}

Ref: users.id - sessions.user_id
Ref: sessions.created_by > users.id
Ref: sessions.updated_by > users.id

Table password_resets {
  id serial [primary key]
  user_id int
  token_reset char(6) [unique, not null]
  expired_at timestamp [not null, default: `CURRENT_TIMESTAMP + INTERVAL '1 hour'`]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [default: `CURRENT_TIMESTAMP`]
  created_by int
  updated_by int
}

Ref: users.id - password_resets.user_id
Ref: password_resets.created_by > users.id
Ref: password_resets.updated_by > users.id

Table categories {
  id serial [primary key]
  name varchar(100) [unique, not null]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [default: `CURRENT_TIMESTAMP`]
  created_by int
  updated_by int
}

Ref: categories.created_by > users.id
Ref: categories.updated_by > users.id

Table product_category {
  id serial [primary key]
  product_id int
  category_id int
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [default: `CURRENT_TIMESTAMP`]
  created_by int
  updated_by int
}

Ref: product_category.product_id > products.id
Ref: product_category.category_id > categories.id
Ref: product_category.created_by > users.id
Ref: product_category.updated_by > users.id

Table coupons {
  id serial [primary key]
  title varchar(255) [unique, not null]
  description text [not null]
  discount_percent numeric(5,2) [not null]
  min_purchase numeric(10,2)
  image text [not null]
  bg_color varchar(20) [not null]
  valid_until timestamp
  is_active bool [default: true]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [default: `CURRENT_TIMESTAMP`]
  created_by int
  updated_by int
}

Ref: coupons.created_by > users.id
Ref: coupons.updated_by > users.id

Table coupon_usage {
  id serial [primary key]
  user_id int
  coupon_id int
  order_id int
  discount_amount numeric(10,2) [note: "Snapshot jumlah diskon yang dipakai saat order"]
  used_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [default: `CURRENT_TIMESTAMP`]
  created_by int
  updated_by int
}

Ref: coupon_usage.user_id > users.id
Ref: coupon_usage.coupon_id > coupons.id
Ref: coupon_usage.order_id > orders.id
Ref: coupon_usage.created_by > users.id
Ref: coupon_usage.updated_by > users.id